--- a/app/views/queue.html
+++ b/app/views/queue.html
@@ -28,6 +28,7 @@
   padding-bottom: 5px !important;
   opacity: 1.0;
   filter: alpha(opacity=100);
+  word-break: break-all;
 } 
    
 .tooltip > .tooltip-arrow { border-bottom-color:black; }
