--- a/app/views/excise-duty-relationship-list.html
+++ b/app/views/excise-duty-relationship-list.html
@@ -17,8 +17,7 @@
       </div>
     </div>
 
-    <error-dialog form-object="itemExciseDutyCreateForm" error-response="errorResponse" display="displayError">
-    </error-dialog>
+    <error-dialog form-object="itemExciseDutyCreateForm" error-response="errorResponse" display="displayError"></error-dialog>
     <error-dialog error-response="errorResponseEdit" display="displayEditError"></error-dialog>
 
     <form name="itemExciseDutyCreateForm">
@@ -45,7 +44,7 @@
                 </select>
               </div>
             </div>
-            <div class="col-xs-6 col-sm-4" ng-class="{ 'has-error' : !newRecord.startDate && displayError && shouldRequireCreateFields(), 'has-success' : newRecord.startDate}">
+            <div class="col-xs-6 col-sm-4" ng-class="{ 'has-error' : isDateValueInvalid(newRecord.startDate, newRecord) && displayError && shouldRequireCreateFields(), 'has-success' : !isDateValueInvalid(newRecord.startDate, newRecord) }">
               <date-picker-field
                 name="startDate"
                 class="form-group"
@@ -57,7 +56,7 @@
                 ng-required="shouldRequireCreateFields()">
               </date-picker-field>
             </div>
-            <div class="col-xs-6 col-sm-4" ng-class="{ 'has-error' : !newRecord.endDate && displayError && shouldRequireCreateFields(), 'has-success' : newRecord.endDate}">
+            <div class="col-xs-6 col-sm-4" ng-class="{ 'has-error' : isDateValueInvalid(newRecord.endDate, newRecord) && displayError && shouldRequireCreateFields(), 'has-success' : !isDateValueInvalid(newRecord.endDate, newRecord) }">
               <date-picker-field
                 name="endDate"
                 class="form-group"
@@ -106,11 +105,10 @@
               </div>
             </div>
             <div class="col-xs-6 col-sm-4">
-              <div class="form-group" ng-class="{ 'has-error' : !newRecord.alcoholVolume && displayError && shouldRequireCreateFields(), 'has-success' : newRecord.alcoholVolume}">
+              <div class="form-group" ng-class="{ 'has-error' : (!newRecord.alcoholVolume || isAlcoholVolumeValueInvalid(newRecord)) && displayError && shouldRequireCreateFields(), 'has-success' : newRecord.alcoholVolume}">
                 <label>Alcohol Volume *</label>
                 <input type = "text"
                        ng-model="newRecord.alcoholVolume"
-                       ng-pattern="regexp.sixNumberWithTwoDecimal"
                        maxlength="7"
                        class="form-control"
                        name="alcoholVolume"/>
@@ -231,6 +229,7 @@
           <td>
             <span ng-hide="isSelectedToEdit(relationship) && canDelete(relationship)">{{ relationship.itemName }}</span>
             <span ng-show="isSelectedToEdit(relationship) && canDelete(relationship)">
+              <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.retailItem && displayEditError, 'has-success' : recordToEdit.retailItem}">
               <ui-select ng-model="recordToEdit.retailItem"
                          theme="bootstrap"
                          placeholder="Select an Item"
@@ -242,11 +241,13 @@
                   <div ng-bind-html="item.itemName | highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
+              </div>
             </span>
           </td>
           <td>
             <span ng-hide="isSelectedToEdit(relationship) && canDelete(relationship)">{{ relationship.commodityCode }}</span>
             <span ng-show="isSelectedToEdit(relationship) && canDelete(relationship)">
+              <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.commodityCode && displayEditError, 'has-success' : recordToEdit.commodityCode}">
               <ui-select required="true"
                          ng-model="recordToEdit.commodityCode"
                          theme="bootstrap"
@@ -259,6 +260,7 @@
                   <div ng-bind-html="record.commodityCode | highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
+              </div>
             </span>
           </td>
           <td>
@@ -275,17 +277,20 @@
           </td>
           <td>
             <span ng-hide="isSelectedToEdit(relationship) && canDelete(relationship)">{{ relationship.startDate }}</span>
+            <div ng-class="{ 'has-error' : isDateValueInvalid(recordToEdit.startDate, recordToEdit) && displayEditError, 'has-success' : !isDateValueInvalid(recordToEdit.startDate, recordToEdit) }">
             <date-picker-field
               name="editStartDate"
-              class="form-group"
+              class="form-group"              
               form="itemExciseDutyEditForm"
               min-date="minDate"
               ng-model="recordToEdit.startDate"
               ng-show="isSelectedToEdit(relationship) && canDelete(relationship)">
             </date-picker-field>
+            </div>
           </td>
           <td>
             <span ng-hide="isSelectedToEdit(relationship)">{{ relationship.endDate }}</span>
+            <div ng-class="{ 'has-error' : isDateValueInvalid(recordToEdit.endDate, recordToEdit) && displayEditError, 'has-success' : !isDateValueInvalid(recordToEdit.endDate, recordToEdit) }">
             <date-picker-field
               name="editEndDate"
               class="form-group"
@@ -294,6 +299,7 @@
               ng-model="recordToEdit.endDate"
               ng-show="isSelectedToEdit(relationship)">
             </date-picker-field>
+            </div>
           </td>
           <td>{{ getUpdatedOn(relationship) }}</td>
           <td>{{ getUpdateBy(relationship) }}</td>
