--- a/app/views/excise-duty-list.html
+++ b/app/views/excise-duty-list.html
@@ -17,9 +17,8 @@
       </div>
     </div>
 
-      <error-dialog form-object="exciseDutyCreateForm" error-response="errorResponse" display="displayError">
-      </error-dialog>
-
+    <error-dialog form-object="exciseDutyCreateForm" error-response="errorResponse" display="displayError"></error-dialog>
+    <error-dialog error-response="errorResponseEdit" display="displayEditError"></error-dialog>
 
     <form name="exciseDutyCreateForm" class="form edit-form create-item-form">
 
@@ -46,9 +45,7 @@
               </div>
             </div>
           </div>
-          
-        </div>
-        
+        </div>      
         
         <div class="panel-body">
           <div class="row">
@@ -64,7 +61,7 @@
                        ng-required="shouldRequireCreateFields()">
               </div>
             </div>
-            <div class="col-xs-6 col-sm-4" ng-class="{ 'has-error' : !newRecord.startDate && displayError  && shouldRequireCreateFields() , 'has-success' : newRecord.startDate}">
+            <div class="col-xs-6 col-sm-4" ng-class="{ 'has-error' : isDateValueInvalid(newRecord.startDate, newRecord) && displayError && shouldRequireCreateFields(), 'has-success' : !isDateValueInvalid(newRecord.startDate, newRecord) }">
               <date-picker-field
                 name="startDate"
                 class="form-group"
@@ -75,7 +72,7 @@
                 ng-required="shouldRequireCreateFields()">
               </date-picker-field>
             </div>
-            <div class="col-xs-6 col-sm-4" ng-class="{ 'has-error' : !newRecord.endDate && displayError && shouldRequireCreateFields() , 'has-success' : newRecord.endDate}">
+            <div class="col-xs-6 col-sm-4" ng-class="{ 'has-error' : isDateValueInvalid(newRecord.endDate, newRecord) && displayError && shouldRequireCreateFields(), 'has-success' : !isDateValueInvalid(newRecord.endDate, newRecord) }">
               <date-picker-field
                 name="endDate"
                 class="form-group"
@@ -89,18 +86,15 @@
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-4">
-              <div class="form-group" ng-class="{ 'has-error' : !newRecord.dutyRate && displayError && shouldRequireCreateFields() , 'has-success' : newRecord.dutyRate}">
+              <div class="form-group" ng-class="{ 'has-error' : (!newRecord.dutyRate || isDutyRateValueInvalid(newRecord)) && displayError && shouldRequireCreateFields(), 'has-success' : newRecord.dutyRate}">            
                 <label>Duty Rate *</label>
-
                 <div class="input-group">
                   <span class="input-group-addon">{{ baseCurrency }}</span>
-                  <input ng-model="newRecord.dutyRate"
-                         custom-validity
-                         custom-pattern="decimalWithTwoDecimalPlaces"
-                         maxlength="10"
+                  <input type = "text"
+                         ng-model="newRecord.dutyRate"
+                         maxlength="9"
                          class="form-control"
-                         name="dutyRate"
-                         ng-required="shouldRequireCreateFields()"/>
+                         name="dutyRate"/>
                 </div>
               </div>
             </div>
@@ -120,7 +114,6 @@
             <div class="col-xs-6 col-sm-4">
               <div class="form-group">
                 <label>Alcohol % *</label>
-
                 <div class="input-group">
                   <input bs-switch
                          ng-model="newRecord.alcoholic"
@@ -210,6 +203,7 @@
           <td>
             <span ng-hide="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">{{ exciseDuty.countryName }}</span>
           <span ng-show="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">
+            <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.country && displayEditError, 'has-success' : recordToEdit.country}">
             <ui-select required="true"
                        name="editCountry"
                        ng-model="recordToEdit.country"
@@ -227,16 +221,14 @@
             <span ng-hide="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">{{ exciseDuty.commodityCode }}</span>
           <span ng-show="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">
               <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.commodityCode && displayEditError, 'has-success' : recordToEdit.commodityCode }">
-              <input type="text" class="form-control"  ng-model="recordToEdit.commodityCode" name="editCommodityCode" required="true"  ng-pattern="regexp.alphaWithSpecialCharMenuItem" ng-disabled="!canDelete(exciseDuty)">
-              <div ng-if="!recordToEdit.commodityCode && displayEditError" ng-class="has-error">
-               <font color="red">The Commodity Code is a required field !</font> 
-              </div>
-              <!-- input class="form-control"
-                   name="editCommodityCode"
-                   ng-pattern="regexp.alphaWithSpecialCharMenuItem"
-                   ng-model="recordToEdit.commodityCode"
-                   ng-disabled="!canDelete(exciseDuty)"
-                   required="true"-->
+              <input 
+              	type="text" 
+              	class="form-control"  
+              	ng-model="recordToEdit.commodityCode" 
+              	name="editCommodityCode" 
+              	required="true"  
+              	ng-pattern="regexp.alphaWithSpecialCharMenuItem" 
+              	ng-disabled="!canDelete(exciseDuty)">
               </input>     
               </div>     
           </span>
@@ -244,6 +236,7 @@
           <td>
             <span ng-hide="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">{{ exciseDuty.volumeUnit }}</span>
           <span ng-show="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">
+            <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.volumeUnitId && displayEditError, 'has-success' : recordToEdit.volumeUnitId}">
             <select class="form-control"
                     ng-model="recordToEdit.volumeUnitId"
                     ng-options="unit.id as (unit.unitName + ' (' + unit.unitCode + ')') for unit in volumeUnits"
@@ -264,23 +257,19 @@
           <td>
             <span ng-hide="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">{{ exciseDuty.dutyRate | number: 2}}</span>
           <span ng-show="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">
-            <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.dutyRate && displayEditError, 'has-success' : recordToEdit.dutyRate}">
-            <input ng-model="recordToEdit.dutyRate"
-                   name="editDutyRate"
-                   ng-pattern="regexp.sixNumberWithTwoDecimal"
+            <div class="form-group" ng-class="{ 'has-error' : (!recordToEdit.dutyRate || isDutyRateValueInvalid(recordToEdit)) && displayEditError, 'has-success' : !isDutyRateValueInvalid(recordToEdit) }">
+            <input type = "text"
+                   ng-model="recordToEdit.dutyRate"
+                   name="dutyRate"
                    maxlength="9"
                    ng-disabled="!canDelete(exciseDuty)"
-                   class="form-control"
-                   required="true">
+                   class="form-control">
             </div>       
-              <div ng-if="!recordToEdit.dutyRate && displayEditError" ng-class="has-error">
-               <font color="red">The Duty Rate is a required Decimal With Two Decimal Places field !</font> 
-              </div>
           </span>
           </td>
           <td>
             <span ng-hide="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">{{ exciseDuty.startDate }}</span>
-            <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.startDate && displayEditError, 'has-success' : recordToEdit.startDate}">
+            <div ng-class="{ 'has-error' : isDateValueInvalid(recordToEdit.startDate, recordToEdit) && displayEditError, 'has-success' : !isDateValueInvalid(recordToEdit.startDate, recordToEdit) }">            
             <date-picker-field
               name="editStartDate"
               class="form-group"
@@ -292,7 +281,7 @@
           </td>
           <td>
             <span ng-hide="isSelectedToEdit(exciseDuty)">{{ exciseDuty.endDate }}</span>
-            <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.endDate && displayEditError, 'has-success' : recordToEdit.endDate}">            
+            <div ng-class="{ 'has-error' : isDateValueInvalid(recordToEdit.endDate, recordToEdit) && displayEditError, 'has-success' : !isDateValueInvalid(recordToEdit.endDate, recordToEdit) }">            
             <date-picker-field
               name="editEndDate"
               custom-effective="true"
@@ -307,8 +296,11 @@
           <td>{{ getUpdatedOn(exciseDuty) }}</td>
           <td>{{ getUpdateBy(exciseDuty) }}</td>
           <td ng-show="isCRUD">
-            <!-- button type="submit" class="btn btn-success btn-xs" tabindex="0" ng-show="isSelectedToEdit(exciseDuty)"-->
-            <button class="btn btn-success btn-xs" tabindex="0" ng-show="isSelectedToEdit(exciseDuty)" ng-click="saveEdit()">
+            <button type="button"
+                    class="btn btn-success btn-xs" 
+                    tabindex="0" 
+                    ng-show="isSelectedToEdit(exciseDuty)" 
+                    ng-click="saveEdit()">
               <i class="fa fa-check"></i>
             </button>
             <button type="button"
