TSVPORTAL-12184 | allow current date in Delivery Note. LMP Users facing issue if current date is not allowed

--- a/app/views/lmp-delivery-note.html
+++ b/app/views/lmp-delivery-note.html
@@ -112,6 +112,7 @@
               <date-picker-field 
                  name="DeliveryDate" 
                  label="Delivery Date"
+                 end-current-effective="true"
                  disable="readOnly"  
                  required="true"
                  ng-model="deliveryNote.deliveryDate">
