--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -298,15 +298,56 @@
                 </ui-select>
               </div>
 
+
               <div class="form-group">
-                <label>Allergen</label>
-                <ui-select ng-if="uiSelectTemplateReady" multiple ng-model="formData.allergens" theme="bootstrap">
-                  <ui-select-match placeholder="Allergens" ui-lock-choice="isDisabled()">{{ $item.name }}
-                  </ui-select-match>
-                  <ui-select-choices repeat="allergen in allergens | filter: $select.search | orderBy:'name'">
-                    <div ng-bind-html="allergen.name | highlight: $select.search"></div>
-                  </ui-select-choices>
-                </ui-select>
+                <h3>Allergen</h3>
+
+                <div class="row">
+                  <div class="form-group col-xs-12">
+                    <button type="button" ng-disabled="isDisabled()" class="btn btn-primary" ng-click="addGTIN()"
+                            ng-hide="formData.shouldUseDynamicBarcode.value">
+                      <i class="fa fa-plus"></i> Add Allergen
+                    </button>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="form-group col-xs-6">
+                    <label>Prefix</label>
+                    <select name="Allergen Prefix" required ng-model="formData.categoryId" class="form-control">
+                      <option ng-selected="setSelected(formData.categoryId, category.id)" ng-repeat="category in salesCategories"
+                              value="{{ category.id }}">{{ category.name }}
+                      </option>
+                    </select>
+                  </div>
+                  <div class="form-group col-xs-6">
+                    <label>Allergen</label>
+                    <ui-select ng-if="uiSelectTemplateReady" multiple ng-model="formData.allergens" theme="bootstrap">
+                      <ui-select-match placeholder="Allergens" ui-lock-choice="isDisabled()">{{ $item.name }}
+                      </ui-select-match>
+                      <ui-select-choices repeat="allergen in allergens | filter: $select.search | orderBy:'name'">
+                        <div ng-bind-html="allergen.name | highlight: $select.search"></div>
+                      </ui-select-choices>
+                    </ui-select>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="form-group col-xs-6">
+                    <label>Other</label>
+                    <ui-select ng-if="uiSelectTemplateReady" multiple ng-model="formData.allergenTags" theme="bootstrap">
+                      <ui-select-match placeholder="Other" ui-lock-choice="isDisabled()">{{ $item.name }}
+                      </ui-select-match>
+                      <ui-select-choices repeat="allergenTag in allergenTags | filter: $select.search | orderBy:'name'">
+                        <div ng-bind-html="allergenTag.name | highlight: $select.search"></div>
+                      </ui-select-choices>
+                    </ui-select>
+                  </div>
+                  <div class="form-group col-xs-6">
+                    <input-textarea label="Notes" name="notes" placeholder="Allergen Notes" max-length="255" class="vertical-resize-only"></input-textarea>
+                  </div>
+                </div>
+
               </div>
 
             </fieldset>
