--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -286,7 +286,7 @@
           <div class="col-xs-12 col-sm-6">
 
             <fieldset ng-disabled="isDisabled()">
-
+{{formData}}
               <div class="form-group">
                 <label>Item Tags</label>
                 <ui-select ng-if="uiSelectTemplateReady" multiple ng-model="formData.tags" theme="bootstrap">
