--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -286,7 +286,7 @@
           <div class="col-xs-12 col-sm-6">
 
             <fieldset ng-disabled="isDisabled()">
-{{formData}}
+
               <div class="form-group">
                 <label>Item Tags</label>
                 <ui-select ng-if="uiSelectTemplateReady" multiple ng-model="formData.tags" theme="bootstrap">
@@ -307,7 +307,7 @@
                     <ui-select ng-if="uiSelectTemplateReady" multiple ng-model="formData.itemAllergens[allergenPrefix.prefix]" theme="bootstrap">
                       <ui-select-match placeholder="Allergens" ui-lock-choice="isDisabled()">{{ $item.name }}
                       </ui-select-match>
-                      <ui-select-choices repeat="allergen in allergens | filter: $select.search | orderBy:'name'">
+                      <ui-select-choices repeat="allergen in allergens | filter: $select.search | filter: isAllergenAvailable | orderBy:'name'">
                         <div ng-bind-html="allergen.name | highlight: $select.search"></div>
                       </ui-select-choices>
                     </ui-select>
