--- a/app/views/stock-owner-item-create.html
+++ b/app/views/stock-owner-item-create.html
@@ -183,13 +183,36 @@
 						</div>
 
 						<div class="form-group">
-							<label>Allergen</label>
-							<ui-select multiple ng-model="formData.allergens" theme="bootstrap">
-	              <ui-select-match placeholder="Allergens" ui-lock-choice="isDisabled()">{{ $item.name }}</ui-select-match>
-	              <ui-select-choices repeat="allergen in allergens | filter: $select.search | orderBy:'name'">
-	                <div ng-bind-html="allergen.name | highlight: $select.search"></div>
-	              </ui-select-choices>
-	            </ui-select>
+              <h3>Allergen</h3>
+
+              <div class="row" ng-repeat="allergenPrefix in allergenPrefixes">
+                <div class="form-group col-xs-12">
+                  <label>{{ allergenPrefix.name }}</label>
+                  <ui-select ng-if="uiSelectTemplateReady" multiple ng-model="formData.itemAllergens[allergenPrefix.prefix]" theme="bootstrap">
+                    <ui-select-match placeholder="Allergens" ui-lock-choice="isDisabled()">{{ $item.name }}
+                    </ui-select-match>
+                    <ui-select-choices repeat="allergen in allergens | filter: $select.search | filter: isAllergenAvailable | orderBy:'name'">
+                      <div ng-bind-html="allergen.name | highlight: $select.search"></div>
+                    </ui-select-choices>
+                  </ui-select>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="form-group col-xs-6">
+                  <label>Other</label>
+                  <ui-select ng-if="uiSelectTemplateReady" multiple ng-model="formData.itemAllergenTags" theme="bootstrap">
+                    <ui-select-match placeholder="Other" ui-lock-choice="isDisabled()">{{ $item.name }}
+                    </ui-select-match>
+                    <ui-select-choices repeat="allergenTag in allergenTags | filter: $select.search | orderBy:'name'">
+                      <div ng-bind-html="allergenTag.name | highlight: $select.search"></div>
+                    </ui-select-choices>
+                  </ui-select>
+                </div>
+                <div class="form-group col-xs-6">
+                  <input-textarea label="Notes" name="allergenNotes" placeholder="Allergen Notes" max-length="255" class="vertical-resize-only"></input-textarea>
+                </div>
+              </div>
 						</div>
 
 					</fieldset>
